--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -29,8 +29,18 @@
 h3{
     margin: 10px;
 }
-#answer{
+.row{
+    display: inline-block;
     color: black;
+}
+.row-btn {
+    display: inline-block;
+    float:right;
+    background-color: #3e8e41;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: white solid 2px;
 }
 #answerBlock{
     width: auto;
